# LazySwitch

./: .gitignore  LICENSE  README.ko.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: in-place-resume-feasibility.md
scripts/: prepare-tauri-cli.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: detect_check.rs  handover_live.rs  parity_check.rs
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: commands.rs  mod.rs  monitor.rs  probe.rs  state.rs  tray.rs  updater.rs  windows.rs
src-tauri/src/core/: accounts.rs  claude_sessions.rs  cli_cwd.rs  cli_handover.rs  cli_sessions.rs  codex_rollouts.rs  config.rs  desktop_processes.rs  i18n.rs  mod.rs  paths.rs  platform.rs  switcher.rs  types.rs  usage_history.rs
src-tauri/src/core/providers/: claude.rs  codex.rs  codex_api.rs  mod.rs
src-tauri/tests/: cli.rs  cli_phase6.rs
src/main/: accounts.ts  app-notify.ts  claude-sessions.ts  cli-cwd-script.ts  cli-handover.ts  cli-hooks.ts  cli-render.ts  cli-resume-routing.ts  cli-sessions.ts  cli.ts  codex-api.ts  codex-rollouts.ts  config.ts  desktop-processes.ts  desktop.ts  i18n.ts  index.ts  login.ts  monitor.ts  paths.ts  preload.ts  switcher.ts  tray-pin.ts
src/main/providers/: claude.ts  codex.ts  types.ts
src/renderer/: approval.html  cli-restart.html  manager.html  notify.html  onboarding.html  tauri-shim.js  widget-settings.html  widget.html
test/: app-notify.test.js  claude-sessions.test.js  claude-usage.test.js  cli-handover.test.js  cli-hooks-render.test.js  cli-restart.test.js  cli-sessions.test.js  cli-statusline-width.test.js  codex-rollouts.test.js  desktop-process-filter.test.js  switcher.test.js
