[package]
name = "lazyswitch"
version = "0.1.1"
description = "Auto-rotate Codex/Claude CLI accounts when usage limits are hit"
authors = ["datell1357"]
license = "MIT"
repository = "https://github.com/datell1357/LazySwitch"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lazyswitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
tauri = { version = "2.11.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
