[package]
name = "lazyswitch"
version = "0.1.1"
description = "Auto-rotate Codex/Claude CLI accounts when usage limits are hit"
authors = ["datell1357"]
license = "MIT"
repository = "https://github.com/datell1357/LazySwitch"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lazyswitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
tauri = { version = "2.11.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
