[package]
name = "lazyswitch"
version = "0.1.1"
description = "Auto-rotate Codex/Claude CLI accounts when usage limits are hit"
authors = ["datell1357"]
license = "MIT"
repository = "https://github.com/datell1357/LazySwitch"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lazyswitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
tauri = { version = "2.11.3", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
sha2 = "0.10"
thiserror = "2.0"
urlencoding = "2.1"
terminal_size = "0.4"
tokio = { version = "1.48", features = ["io-std", "io-util", "rt", "time"] }
muda = "0.19.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Registry",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Memory",
  "Win32_System_DataExchange"
] }

[dev-dependencies]
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
